<resources>
    <string name="app_name">WanAndroid</string>
    <string name="title_account">我的</string>
    <string name="title_find">发现</string>
    <string name="title_home">首页</string>
    <string name="title_system">知识体系</string>
    <string name="title_navigation">导航</string>
    <string name="login_title">玩Android</string>

    <string name="alphabet_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="top">置顶</string>
    <string name="new_article">新</string>
</resources>
