<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_find"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/title_find"/>

    <item
            android:id="@+id/navigation_system"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/title_system"/>
    <item
            android:id="@+id/navigation_navigation"
            android:icon="@drawable/ic_navigation_black_24dp"
            android:title="@string/title_navigation"/>

    <item
            android:id="@+id/navigation_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/title_account"/>

</menu>
